Práctica 7 Acceso Seguro/iptables
# Generated by iptables-save v1.4.7 on Mon Apr 24 15:56:28 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -m state --state NEW -j ACCEPT 
-A INPUT -i eth1 -p icmp -m state --state NEW -j ACCEPT 
-A INPUT -s 10.110.1.24/32 -p tcp -m state --state NEW -m tcp --dport 4222 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state NEW -m tcp --dport 4222 -j LOG --log-prefix "Conexión externa SSH : "
-A INPUT -p tcp -m tcp --sport 4222 -j ACCEPT
-A INPUT -i eth1 -p tcp -m tcp --dport 4222 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m multiport --dports 137,138,139,143,445 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 137,138,139,143,445 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m state --state NEW -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -p icmp -m state --state NEW -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -p tcp -m multiport --dports 8443 -m state --state NEW -j ACCEPT 
-A FORWARD -i eth1 -o eth0 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT 
-A FORWARD -i eth0 -o eth1 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT 
-A FORWARD -d 10.110.1.24/32 -i eth1 -o eth0 -p tcp -m tcp --dport 4222 -m state --state NEW -j ACCEPT 
-A FORWARD -i eth0 -o eth1 -p tcp -m state --state NEW -m tcp --dport 4222 -j LOG --log-prefix "Conexión interna SSH : " 
-A FORWARD -p tcp -m tcp --dport 25 -m state --state NEW -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 143 -m state --state NEW -j ACCEPT 
-A FORWARD -d 10.110.1.20/32 -i eth1 -p tcp -m state --state NEW -m tcp --dport 4222 -j ACCEPT 
-A FORWARD -p tcp -m state --state NEW -m tcp --dport 445 -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p icmp -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m multiport --dports 80,443,8443 -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT 
-A OUTPUT -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 25 -m state --state NEW -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 143 -m state --state NEW -j ACCEPT 
-A OUTPUT -p udp -m state --state NEW -m udp --dport 137:138 -j ACCEPT 
-A OUTPUT -p tcp -m state --state NEW -m tcp --dport 139 -j ACCEPT 
-A OUTPUT -p tcp -m state --state NEW -m tcp --dport 445 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 8080 -m state --state NEW -j ACCEPT 
COMMIT
# Completed on Mon Apr 24 15:56:28 2017
